# genkit-demo

./: .gitignore  main.py  pyproject.toml  render-build.sh  requirements.txt
static/: index.html
