[project]
name = "ginkittest"
version = "0.1.0"
description = "Genkit Python test on Windows"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.135.1",
    "genkit-plugin-google-genai==0.4.0",
    "genkit[google-genai]==0.4.0",
    "google-genai>=1.67.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'"
]
